2005-01-28  Damien Sandras  <dsandras@gnome.org>

	* src/main_window.cpp: Removed unused callback that was
	giving problems with GTK+ 2.6.

2005-01-26  Miguel Rodríguez Pérez  <miguelrp@gmail.com>

	* configure.in: Let us compile against libebook-1.2 too. This time
	avoiding to broke the build ;)

2005-01-25  Miguel Rodríguez Pérez  <miguelrp@gmail.com>

	* NEWS: Updated.

	* configure.in: Let us compile against libebook-1.2 too.

2005-01-06  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-eds.cpp: Removed unuseful instruction
	giving warnings with EDS 1.2.

2005-01-04  Miguel Rodriguez Perez  <miguelrp@gmail.com>

	* src/main_window.cpp (gm_mw_init_menu, gm_mw_video_window_new):
	Don't create an entry in the manus to switch to fullscreen if
	SDL is not available at compile time.

2004-12-28  Damien Sandras  <dsandras@gnome.org>

	* src/connection.cpp: Fixed #162391.

2004-12-28  Damien Sandras  <dsandras@gnome.org>

	* C/gnomemeeting.xml, fr/gnomemeeting.xml: Changed host:[port] into
	host[:port] thanks to Hugh Daniel.

2004-12-26  Miguel Rodriguez Perez  <miguelrp@gmail.com>

	* po/es.po
	* src/callbacks.cpp (about_callback): 
	* src/tray.cpp: 
	* src/config.cpp: 
	* src/pref_window.cpp: 
	* AUTHORS (Contributors): Change my email address to the one in gmail.

	* lib/contacts/Makefile.am (INCLUDES): Add GNOMEMEETING_CFLAGS so
	that it can be compiled with pwlib installed ouside of /usr.

2004-12-24  Damien Sandras  <dsandras@gnome.org>

	* src/callbacks.cpp: Fixed about dialog.

	* src/endpoint.cpp: Do take a lock on the connection when reading the
	volume from the device as it is already done and unnecessary.

	* NEWS: Updated with CVS NEWS.
	
2004-12-22  Damien Sandras  <dsandras@gnome.org>

	* gnomemeeting.service.in, src/dbus_component.cpp, 
	src/dbus_component.h: Fixed leaks thanks to Julien.

2004-12-22  Damien Sandras  <dsandras@gnome.org>

	* src/log_window.cpp, src/main_window.cpp: Applied UI fixes provided