@@ -242,6 +242,12 @@ GnomeMeeting::DetectDevices ()
   PTRACE (1, "Detected video plugins: " << setfill (',') << video_managers
 	  << setfill (' '));
   
+  
+  /* No Picture plugin => Exit */
+  fake_idx = video_managers.GetValuesIndex (PString ("Picture"));
+  if (fake_idx == P_MAX_INDEX)
+    return FALSE;
+
 
   /* No audio plugin => Exit */
   if (audio_managers.GetSize () == 0)
