@@ -1,5 +1,11 @@
 2005-01-28  Damien Sandras  <dsandras@gnome.org>
 
+	* src/gnomemeeting.cpp: Exit if there is no Picture plugin.
+
+	* src/endpoint.cpp: Fixed notation when the remote host is ipv6.
+
+2005-01-28  Damien Sandras  <dsandras@gnome.org>
+
 	* src/main_window.cpp: Removed unused callback that was
 	giving problems with GTK+ 2.6.
 
